force-app/main/default/objects/FMSBillPayReq__c/FMSBillPayReq__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill+TRX Plan</label>
    <nameField>
        <displayFormat>FBPR-{000000}</displayFormat>
        <label>FMS BILL+TRX PLAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS Bill+TRX Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>