force-app/main/default/objects/FMSBillPayReq__c/fields/AmountBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxFCY__c</fullName>
    <formula>FMSBillID__r.BuyInTaxAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>