force-app/main/default/objects/FMSBillPayReq__c/fields/AmountBuyingInclTaxFCYValue__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxFCYValue__c</fullName>
    <label>Amount Buying Incl Tax (FCY)-Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>