force-app/main/default/objects/FMSBillPayReq__c/fields/AmountofTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuyingLocal__c</fullName>
    <formula>IF( or(
and(PaymentRequestID__r.PaymentTo__c = Null, PaymentRequestID__r.InvoiceTo__c = Null),
PaymentRequestID__r.PaymentTo__c =  FMSBillID__r.PaymentTo__c,
PaymentRequestID__r.InvoiceTo__c =  FMSBillID__r.PaymentTo__c),
FMSBillID__r.BuyTaxNum__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>