force-app/main/default/objects/FMSBillPayReq__c/fields/AmountofTaxSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxSellingFCY__c</fullName>
    <formula>IF( or(
and(PaymentRequestID__r.PaymentTo__c = Null, PaymentRequestID__r.InvoiceTo__c = Null),
PaymentRequestID__r.InvoiceTo__c = FMSBillID__r.Seikyusaki__c,
PaymentRequestID__r.PaymentTo__c = FMSBillID__r.Seikyusaki__c),
FMSBillID__r.SellTaxNum_USD__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Selling(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>