force-app/main/default/objects/FMSBillPayReq__c/fields/AmountSellingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxFCY__c</fullName>
    <formula>FMSBillID__r.SellInTaxAmount_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Selling Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>