force-app/main/default/objects/FMSBillPayReq__c/fields/AmountSellingInclTaxFCYValue__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxFCYValue__c</fullName>
    <label>Amount Selling Incl Tax (FCY)-Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>