force-app/main/default/objects/FMSBillPayReq__c/fields/AmountSellingInclTaxLocalValue__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxLocalValue__c</fullName>
    <label>Amount Selling Incl Tax (Local)-Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>