force-app/main/default/objects/FMSBillPayReq__c/fields/BillInvToSameTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>BillInvToSameTrxPlan__c</fullName>
    <label>Bill Inv To Same Trx Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>