force-app/main/default/objects/FMSBillPayReq__c/fields/BillNameatPrintENG__c.field-meta.xml
<CustomField>
    <fullName>BillNameatPrintENG__c</fullName>
    <formula>FMSBillID__r.InsatuyouSyohinEng__c</formula>
    <label>Bill Name at Print(ENG)</label>
    <type>Text</type>
</CustomField>