force-app/main/default/objects/FMSBillPayReq__c/fields/BillNameatPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>BillNameatPrintLocal__c</fullName>
    <formula>FMSBillID__r.InsatuyouSyohin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Name at Print(Local)</label>
    <type>Text</type>
</CustomField>