force-app/main/default/objects/FMSBillPayReq__c/fields/BillPayToSameTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>BillPayToSameTrxPlan__c</fullName>
    <label>Bill Pay To Same Trx Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>