force-app/main/default/objects/FMSBillPayReq__c/fields/CashID__c.field-meta.xml
<CustomField>
    <fullName>CashID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH ID</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipLabel>FMS BILL+TRX PLAN</relationshipLabel>
    <relationshipName>FMSBillTrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>