force-app/main/default/objects/FMSBillPayReq__c/fields/ChargeQuantity__c.field-meta.xml
<CustomField>
    <fullName>ChargeQuantity__c</fullName>
    <formula>FMSBillID__r.Suryo__c</formula>
    <label>Charge Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>