force-app/main/default/objects/FMSBillPayReq__c/fields/ChargeUnitinPrint__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnitinPrint__c</fullName>
    <formula>FMSBillID__r.ChargeUnitInPrint__c</formula>
    <label>Charge Unit in Print</label>
    <type>Text</type>
</CustomField>