force-app/main/default/objects/FMSBillPayReq__c/fields/CurrencySelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencySelling__c</fullName>
    <formula>text( FMSBillID__r.curr__c )</formula>
    <label>Currency-Selling</label>
    <type>Text</type>
</CustomField>