force-app/main/default/objects/FMSBillPayReq__c/fields/ETDETA__c.field-meta.xml
<CustomField>
    <fullName>ETDETA__c</fullName>
    <formula>text(FMSBillID__r.Anken__r.ETD__c) &amp; &quot;/&quot; &amp; text(FMSBillID__r.Anken__r.ETA__c)</formula>
    <label>ETD/ETA</label>
    <type>Text</type>
</CustomField>