force-app/main/default/objects/FMSBillPayReq__c/fields/FMSBillID__c.field-meta.xml
<CustomField>
    <fullName>FMSBillID__c</fullName>
    <label>FMS BILL ID</label>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipName>FMSBillPayReq</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>