force-app/main/default/objects/FMSBillPayReq__c/fields/FMSUnpaidBalOfBuyingLocalPayReq__c.field-meta.xml
<CustomField>
    <fullName>FMSUnpaidBalOfBuyingLocalPayReq__c</fullName>
    <label>FMS UNPAID BAL OF BUYING(LOCAL)-PAY REQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>