force-app/main/default/objects/FMSBillPayReq__c/fields/FMSUnpaidBalOfBuyingUSDPayReq__c.field-meta.xml
<CustomField>
    <fullName>FMSUnpaidBalOfBuyingUSDPayReq__c</fullName>
    <label>FMS UNPAID BAL OF BUYING(USD)-PAY REQ</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>