force-app/main/default/objects/FMSBillPayReq__c/fields/FMSUnreceivedBalOfSellingLocalTrx__c.field-meta.xml
<CustomField>
    <fullName>FMSUnreceivedBalOfSellingLocalTrx__c</fullName>
    <label>FMS UNRECEIVED BAL OF SELLING(LOCAL)-TRX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>