force-app/main/default/objects/FMSBillPayReq__c/fields/FMSUnreceivedBalOfSellingUSDTrx__c.field-meta.xml
<CustomField>
    <fullName>FMSUnreceivedBalOfSellingUSDTrx__c</fullName>
    <label>FMS UNRECEIVED BAL OF SELLING(USD)-TRX</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>