force-app/main/default/objects/FMSBillPayReq__c/fields/FTMSBillName__c.field-meta.xml
<CustomField>
    <fullName>FTMSBillName__c</fullName>
    <formula>FMSBillID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F/TMS Bill Name</label>
    <type>Text</type>
</CustomField>