force-app/main/default/objects/FMSBillPayReq__c/fields/FTMSBillText__c.field-meta.xml
<CustomField>
    <fullName>FTMSBillText__c</fullName>
    <label>F/TMS Bill-Text</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>