force-app/main/default/objects/FMSBillPayReq__c/fields/InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTo__c</fullName>
    <formula>FMSBillID__r.Seikyusaki__r.Name</formula>
    <label>Invoice To</label>
    <type>Text</type>
</CustomField>