force-app/main/default/objects/FMSBillPayReq__c/fields/JobRequestID__c.field-meta.xml
<CustomField>
    <fullName>JobRequestID__c</fullName>
    <formula>FMSBillID__r.Anken__r.JobRequestID__c</formula>
    <label>Job Request ID</label>
    <type>Text</type>
</CustomField>