force-app/main/default/objects/FMSBillPayReq__c/fields/LoanID__c.field-meta.xml
<CustomField>
    <fullName>LoanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN ID</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>FMS BILL+TRX PLAN</relationshipLabel>
    <relationshipName>FMSBillTrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>