force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetProcessedBuyingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessedBuyingAmountFCY__c</fullName>
    <label>Offset Processed Buying Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>