force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetProcessedBuyingAmountFCYFor__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessedBuyingAmountFCYFor__c</fullName>
    <formula>IF(and(FMSBillID__r.AMOUNT_PAID_BUYING_USD__c &lt;&gt; 0, text(FMSBillID__r.payment_category__c) =&quot;相殺&quot;),  FMSBillID__r.AMOUNT_PAID_BUYING_USD__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Processed Buying Amount(FCY)-F</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>