force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetProcessedBuyingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessedBuyingAmountLocal__c</fullName>
    <label>Offset Processed Buying Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>