force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetProcessedSellingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessedSellingAmountFCY__c</fullName>
    <label>Offset Processed Selling Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>