force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessingStatus__c</fullName>
    <label>Offset Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceivablePayableProcessingStatus</valueSetName>
    </valueSet>
</CustomField>