force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetRemainedBuyingAmountFCYFor__c.field-meta.xml
<CustomField>
    <fullName>OffsetRemainedBuyingAmountFCYFor__c</fullName>
    <formula>PaymentRequestID__r.OffsetRemainedBuyingAmountFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Buying Amount(FCY)-F</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>