force-app/main/default/objects/FMSBillPayReq__c/fields/OffsetRemainedSellingAmountFCYFor__c.field-meta.xml
<CustomField>
    <fullName>OffsetRemainedSellingAmountFCYFor__c</fullName>
    <formula>PaymentRequestID__r.OffseRemainedSellingAmountFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Selling Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>