force-app/main/default/objects/FMSBillPayReq__c/fields/PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>PaymentTo__c</fullName>
    <formula>FMSBillID__r.PaymentTo__r.Name</formula>
    <label>Payment To</label>
    <type>Text</type>
</CustomField>