force-app/main/default/objects/FMSBillPayReq__c/fields/PayReqRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>PayReqRollupStatus__c</fullName>
    <label>PAY REQ ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>