force-app/main/default/objects/FMSBillPayReq__c/fields/POLAODPODAOA__c.field-meta.xml
<CustomField>
    <fullName>POLAODPODAOA__c</fullName>
    <formula>FMSBillID__r.Anken__r.PortOfLoadingDetailPrint__c &amp; &quot;/&quot; &amp;   FMSBillID__r.Anken__r.PortOfDischargeDetailPrint__c</formula>
    <label>P.O.L(A.O.D)/P.O.D(A.O.A)</label>
    <type>Text</type>
</CustomField>