force-app/main/default/objects/FMSBillPayReq__c/fields/StartAutomaticProcessing__c.field-meta.xml
<CustomField>
    <fullName>StartAutomaticProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Automatic Processing</label>
    <type>Checkbox</type>
</CustomField>