force-app/main/default/objects/FMSBillPayReq__c/fields/StartOffsetAutomaticProcessing__c.field-meta.xml
<CustomField>
    <fullName>StartOffsetAutomaticProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Offset Automatic Processing</label>
    <type>Checkbox</type>
</CustomField>