force-app/main/default/objects/FMSBillPayReq__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <formula>IF( or(
and(PaymentRequestID__r.PaymentTo__c = Null, PaymentRequestID__r.InvoiceTo__c = Null),
PaymentRequestID__r.PaymentTo__c = FMSBillID__r.PaymentTo__c, PaymentRequestID__r.InvoiceTo__c = FMSBillID__r.PaymentTo__c),
FMSBillID__r.BuyAmountJPN__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>