force-app/main/default/objects/FMSBillPayReq__c/fields/UnitPriceOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfBuyingLocal__c</fullName>
    <formula>IF( or(
and(PaymentRequestID__r.PaymentTo__c = Null, PaymentRequestID__r.InvoiceTo__c = Null),
PaymentRequestID__r.PaymentTo__c = FMSBillID__r.PaymentTo__c , PaymentRequestID__r.InvoiceTo__c = FMSBillID__r.PaymentTo__c), FMSBillID__r.BuyTankaJPY__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price of Buying(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>