force-app/main/default/objects/FMSBillPayReq__c/fields/UnitPriceofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSellingLocal__c</fullName>
    <formula>IF( or(
and(PaymentRequestID__r.PaymentTo__c = Null, PaymentRequestID__r.InvoiceTo__c = Null),
PaymentRequestID__r.InvoiceTo__c = FMSBillID__r.Seikyusaki__c , PaymentRequestID__r.PaymentTo__c = FMSBillID__r.Seikyusaki__c),
FMSBillID__r.SellTankaJPY__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price of Selling(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>