force-app/main/default/objects/FMSBillPayReq__c/fields/UnpaidBalanceOfBuyingUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSDFormula__c</fullName>
    <formula>IF( or(
and(PaymentRequestID__r.PaymentTo__c = Null, PaymentRequestID__r.InvoiceTo__c = Null),
PaymentRequestID__r.PaymentTo__c = FMSBillID__r.PaymentTo__c , PaymentRequestID__r.InvoiceTo__c = FMSBillID__r.PaymentTo__c),
FMSBillID__r.UNPAID_BALANCE_OF_BUYING_USD__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF BUYING(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>