force-app/main/default/objects/FMSBillPayReq__c/fields/VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>VesselFlight__c</fullName>
    <formula>FMSBillID__r.Anken__r.VESSEL_FLIGHT__c &amp; &quot;/&quot; &amp;
FMSBillID__r.Anken__r.No_Voyage_Flight__c</formula>
    <label>Vessel/Flight</label>
    <type>Text</type>
</CustomField>